# defect-threshold-tuning

./: .gitignore  Makefile  README.md  analysis.py  eda.ipynb  eda.py  image_metrics.csv  pyproject.toml  requirements.txt  threshold_metrics.csv  threshold_results.csv
data/: anno_df.csv  polygon_matches.csv  pred_df.csv  threshold_metrics.csv  threshold_metrics_10.csv  threshold_metrics_100.csv  threshold_metrics_1000.csv
scripts/: coordinates_parser.py  create_image_metrics.py  iou_calculater.py  polygons_comparator.py
src/: eda.ipynb
src/scripts/: __init__.py  create_image_metrics.py  polygons_comparator.py
