[tool.poetry]
name = ""  
version = "0.1.0"
description = ""
authors = ["Yordanos Wuletaw <yordanoswuletaw@gmail.com>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pandas = ">=2.2.3,<3.0.0"
seaborn = ">=0.13.2,<0.14.0"
matplotlib = ">=3.10.1,<4.0.0"
shapely = ">=2.1.0,<3.0.0"
numpy = "^2.2.5"
tqdm = "^4.67.1"
scipy = "^1.15.2"
scikit-learn = "^1.6.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
